# Sankore

./: .env.example  .gitignore  .railway-url  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FILES_CREATED.txt  LAKEHOUSE_UPGRADE_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  Procfile  QUICK_START_DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  test_critical_fixes.py
dags/: paid_ads_walker_dag.py
docs/: paid-ads-walker-agent-solution.md
scripts/: verify_deployment.sh
src/: celery_app.py  main.py
src/api/: deps.py
src/api/v1/endpoints/: analysis.py  trends.py
src/config/: settings.py
src/db/: session.py
src/db/models/: intelligence.py
src/services/analysis/: copy_analyzer.py
src/services/trends/: aggregator.py  base.py
src/services/trends/providers/: meta.py  tiktok.py
