[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sankore"
version = "0.1.0"
description = "Sankore: Paid Ads Intelligence Layer for En Garde"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.10.6",
    "openai>=1.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "redis>=4.6.0",
    "httpx>=0.28.1"
]
